--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/materialize/bin/materialize.js"></script>
+    <script src="bower_components/angular-md5/angular-md5.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -49,6 +50,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/config/config.js"></script>
+    <script src="scripts/services/marvel.services.js"></script>
     <!-- endbuild -->
 </body>
 </html>
