--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="bower_components/materialize/bin/materialize.js"></script>
     <script src="bower_components/angular-md5/angular-md5.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-websql/angular-websql.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
